# Machionia

./: .gitignore  CMakeLists.txt  README.md  TODOLIST.md  buildexe.bat  changelog.md  commit.bat
include/: assets_loc.hpp  camera.hpp  collider.hpp  config.hpp  entity.hpp  globals.hpp  lang.hpp  map.hpp  player.hpp  ressourcenode.hpp  troop.hpp  ui.hpp
lang/: en_us.json
src/: main.cpp
src/map/: map.cpp  ressourcenode.cpp
src/player/: camera.cpp
src/templates/: collider.cpp  entity.cpp
src/ui/: ui.cpp
src/variables/: assets_loc.cpp  config.cpp  globals.cpp
